- new possible values (RealHeight and RealSize) for the "scaleImage" 
attribute of the image elements;

- support for pluggable exporter filter factories in addition 
to the existing FILTER exporter parameter;

- new exporter filter implementation for filtering out content 
based on the element's key property;

- password protection for the XLS files generated with 
the JExcelApi-based exporter;

- minor bug fixes and improvements;





JasperReports 3.0.0 (2008-05-19)
-----------------------------------

- support for custom properties at element level in generated documents, 
to allow extending exporter functionality; 

- custom element properties can have expressions as values (dynamic values);

- support for XLS cell formula, using the "net.sf.jasperreports.export.xls.formula" 
custom property at element level;

- better control over sheet breaks in XLS exporters using the new custom element
properties called "net.sf.jasperreports.export.xls.break.before.row" and
"net.sf.jasperreports.export.xls.break.after.row";

- new configuration property called "net.sf.jasperreports.export.legacy.border.offset"
to allow rendering element borders in older reports using the legacy border offset 
technique that that was used in versions prior to the 2.0.3 release.  

- support for "Parent" and "Top" as hyperlink targets;

- enhanced XML exporter and new XML exporter servlet added to facilitate viewing
reports using the JasperReports Flash Viewer component 
(http://jasperforge.org/sf/projects/jasperreports-flash);

- new experimental XMLSS exporter (XML Spreadsheet Format) that allows streaming
content while generating the document and thus avoid memory problems with 
very large reports; 

- minor bug fixes and improvements;





JasperReports 2.0.5 (2008-03-12)
-----------------------------------

- support for RTF and HTML snippets inside text elements using new "markup" attribute 
that deprecates the former isStyledText attribute;
